--- a/docs/reports/05.12-05.19.md
+++ b/docs/reports/05.12-05.19.md
@@ -1,4 +1,4 @@
-### Overview for week 1 05.12-05.19
+### Overview for Week 1 05.12-05.19
 Since the basic framework of ovfs is difficult to express with little code, we plan to do some local development under [this repository](https://github.com/zjregee/ovfs) first.
 
 The implementation of virtiofsd includes a built-in small file system (used to forward requests to the local file system) and a lot of code that encapsulates the small file system into virtiofs. From a simple reading, the implementation of these two parts, virtiofsd, is relatively decoupled and defines some common data structures and traits.
@@ -10,7 +10,7 @@ Regarding the first goal for now, we current plan is to re-implement the small f
 - [x] Implement `FileSystem` trait defined by vritiofsd for ovfs.
 - [x] Implement `FileReadWriteAtVolatile` trait for opendal buffer to support read and write interaction with the memory in VMs through opendal buffer.
 
-#### Plan for near future
+#### Plan For Near Future
 - [ ] Run virtiofsd.
 - [ ] Replace the file system implementation in virtiofsd with ovfs and try to re-run virtiofsd.
 
