--- a/docs/reports/05.20-05.26.md
+++ b/docs/reports/05.20-05.26.md
@@ -7,7 +7,7 @@ The first is the maturity of virtiofs and virtofsd technology. The ease of use o
 The second is the potential problems that may exists when combining virtiofsd original code with the asynchronous ecosystem. Since virtofsd does not rely on asynchronous ecosystem construction, the asynchronous interface functions of opendal are handled by explicitly using tokio runtime and synchronous bridging. It is worth mentioning that in the initial development, when virtiofsd involved tokio and opendal related calls, the process would inexplicably exit. After investigation, this is because virtiofsd prohibits the use of some system calls by enabling secure computing mode by default. After deleting the related code, opendal can be used normally in virtofsd.
 
 #### Task List
-- [x] Install and run Ubuntu 20.04 via QEMU.
+- [x] Install and run Ubuntu 20.04 via qemu.
 - [x] Share local filesystem directory between VMs through virtiofsd.
 - [x] Re-implement passthroughfs in virtiofsd through opendal and verify its feasibility.
 
