--- a/docs/reports/05.27-06.02.md
+++ b/docs/reports/05.27-06.02.md
@@ -9,6 +9,6 @@ Code development for ovfs from these four aspects:
 - [ ] Polish code.
 - [ ] Align ofs, add configuration parsing and project running entry.
 - [ ] Add virtiofs message parsing and forwarding related implementation.
-- [ ] Add filesystem functions based on OpenDAL, the goal is to realize file creation and deletion in S3. This MVP mainly involves these functions: lookup, getattr, create, unlink, init, etc.
+- [ ] Add filesystem functions based on opendal, the goal is to realize file creation and deletion in S3. This MVP mainly involves these functions: lookup, getattr, create, unlink, init, etc.
 
 Potential completion time: 06.16.
